--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,48 +6,19 @@ body {
   
     line-height: 34px;
   
-    background-color: #9fdb12;
+    background-color: rgb(171, 199, 11);
   
   }
   
-  
-  
-  
-  
-  /*general*/
-  
-  
-  
-  .container {
-  
-  
-    clear: both;
-  
-    margin: 0 auto;
-  
-    width: 100%;
-  
-    max-width: 1520px;
-  
-  }
-  
-  
-  
-  h1,
-  
-  h2,
-  
-  h3 {
-  
-    font-family: 'Georgia', Times, "Times New Roman", serif;
-  
-    font-weight: 700;
-  
-  }
-  
-  
-  
-  h1 {
+   .container {
+     width: 100%;
+       max-width: 960px; 
+       margin: 0 auto; 
+      clear: both;  
+
+  } 
+   
+   h1 {
   
     padding-bottom: 20px;
   
@@ -57,98 +28,34 @@ body {
   
     line-height: 49px;
   
-    color: #372f6a;
+    color: #f05f0b;
   
   }
-  
-  
-  
-  h2,
-  
-  h3 {
-  
-    font-size: 22px;
-  
-  }
-  
-  
-  
-  
-  
-  /*header*/
-  
-  .container {
-  
-    padding:0;
-  
-    margin:0;
-  
-  }
-  
-  
-  
-  #banner {
-  
-    height: 200px;
-  
-    width:100%;
-  
-  }
-  
-  
-  
-  .head-image {
+ 
+   .head-image {
   
     width:100%;
   
     height:200px;
-  
-  }
-  
-  
-  
-  
-  
-  /*Main*/
-  
-  .main-container {
-  
-    margin-top:40px;
-  
-    padding:40px;
-  
-    float: left;
-  
-  }
-  
-  
+   
+  } 
   
   .side-image {
-  
-    margin-top: -40px;
-  
+    width: 300px;
     height: 200px;
+   
+     }
   
-  }
-  
-  
-  
-  /*footer*/
-  
-  
-  
-  footer {
-  
-    padding: 30px 0;
-  
-    clear: both;
-  
-    font-size: 14px;
-  
-    color: #0e0ee6;
-  
+  .footer1 {
+    position:relative;
+    padding: 10px 0;
+    font-size: 16px;
+    color: #ffffff;
     text-align: center;
-  
-  }
+    background: #666666;
+    border: 1px solid rgb(35, 14, 221);
+    height: 30px;
+
+    }
   
   
